# persona

./: .env.example  .env.sandbox.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  instructions.md  main.py  mcp_config.json.sample  pyproject.toml
skills/skillsmp-search/: SKILL.md
skills/web-search/: SKILL.md
skills/web-search/references/: search_methods.md
skills/web-search/scripts/: web_search.py
src/persona/: cli.py  commands.py  repl.py  session.py
src/persona/agent/: __init__.py  builder.py  tools.py
src/persona/config/: __init__.py  env.py  paths.py
src/persona/sandbox/: __init__.py  container.py  manager.py
src/persona/skills/: __init__.py  parser.py
tests/: conftest.py  test_cli_eval.py  test_config_env.py  test_config_paths.py  test_conversation_history.py  test_datetime_formatter.py  test_mcp.py  test_sandbox_container.py  test_sandbox_manager.py
